DEVEX-3315 formated code by hand part 1

--- a/src/app/advisor/advisor.component.html
+++ b/src/app/advisor/advisor.component.html
@@ -1,112 +1,119 @@
 <div class="advisor-page">
-	<div class="advisor--inner">
-		<div class="advisor-fs">
-			<div class="fs-image-container">
-				<img src="assets/img/advisor-page.png" alt="">
-			</div>
-			<div class="fs-wr">
-				<div class="title-wr">
-					<h2>Become an Official Advisor of Exrates Exchange!</h2>
-				</div>
-				<div class="button-wr">
-					<a href="#" class="standart-btn" target="blank"><span>Send a request</span></a>
-				</div>
-			</div>
-		</div>
-		<div class="how-get">
-			<div class="title">
-				<h4>Benefits of becoming our advisor</h4>
-			</div>
-			<div class="how-get-item-wr">
-				<div class="how-get-item hover">
-					<div class="head-item">
-						<h5>Get commission and bonuses for every client you involved</h5>
-					</div>
-					<div class="description-item">
-						<p>Special reward system for advisors: get <br>from  5% to 15%</p>
-					</div>
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>Your personal page on Exchange website</h5>
-					</div>
-					
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>Attend conferences and events as a part of Exrates team</h5>
-					</div>
-					
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>Get exclusive analytical market reports</h5>
-					</div>
-					
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>Your personal manager</h5>
-					</div>
-					
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>An opportunity to become a <br>part of international community</h5>
-					</div>
-					
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>Participation in online trainings and webinars</h5>
-					</div>
-					
-				</div>
-				<div class="how-get-item">
-					<div class="head-item">
-						<h5>Referral program</h5>
-					</div>
-					
-				</div>
+  <div class="advisor--inner">
+    <div class="advisor-fs">
+      <div class="fs-image-container">
+        <img
+          src="assets/img/advisor-page.png"
+          alt=""
+        >
+      </div>
+      <div class="fs-wr">
+        <div class="title-wr">
+          <h2>Become an Official Advisor of Exrates Exchange!</h2>
+        </div>
+        <div class="button-wr">
+          <a
+            href="#"
+            class="standart-btn"
+            target="blank"
+          ><span>Send a request</span></a>
+        </div>
+      </div>
+    </div>
+    <div class="how-get">
+      <div class="title">
+        <h4>Benefits of becoming our advisor</h4>
+      </div>
+      <div class="how-get-item-wr">
+        <div class="how-get-item hover">
+          <div class="head-item">
+            <h5>Get commission and bonuses for every client you involved</h5>
+          </div>
+          <div class="description-item">
+            <p>Special reward system for advisors: get <br>from 5% to 15%</p>
+          </div>
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>Your personal page on Exchange website</h5>
+          </div>
 
-			</div>
-		</div>
-		<div class="exchange-info">
-			<div class="exchange-item-wr">
-				<div class="exchange-item">
-					<div class="title">
-						<p>Trading volume for 24h</p>
-					</div>
-					<div class="value">
-						<span>$285,757,124</span>
-					</div>
-				</div>
-				<div class="exchange-item">
-					<div class="title">
-						<p>Trading pairs</p>
-					</div>
-					<div class="value">
-						<span>512</span>
-					</div>
-				</div>
-				<div class="exchange-item">
-					<div class="title">
-						<p>Fiat deposits and withdrawals</p>
-					</div>
-					<div class="value">
-						<span>35 currencies</span>
-					</div>
-				</div>
-				<div class="exchange-item">
-					<div class="title">
-						<p>Active traders</p>
-					</div>
-					<div class="value">
-						<span>140 000 +</span>
-					</div>
-				</div>
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>Attend conferences and events as a part of Exrates team</h5>
+          </div>
 
-			</div>
-		</div>
-	</div>
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>Get exclusive analytical market reports</h5>
+          </div>
+
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>Your personal manager</h5>
+          </div>
+
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>An opportunity to become a <br>part of international community</h5>
+          </div>
+
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>Participation in online trainings and webinars</h5>
+          </div>
+
+        </div>
+        <div class="how-get-item">
+          <div class="head-item">
+            <h5>Referral program</h5>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+    <div class="exchange-info">
+      <div class="exchange-item-wr">
+        <div class="exchange-item">
+          <div class="title">
+            <p>Trading volume for 24h</p>
+          </div>
+          <div class="value">
+            <span>$285,757,124</span>
+          </div>
+        </div>
+        <div class="exchange-item">
+          <div class="title">
+            <p>Trading pairs</p>
+          </div>
+          <div class="value">
+            <span>512</span>
+          </div>
+        </div>
+        <div class="exchange-item">
+          <div class="title">
+            <p>Fiat deposits and withdrawals</p>
+          </div>
+          <div class="value">
+            <span>35 currencies</span>
+          </div>
+        </div>
+        <div class="exchange-item">
+          <div class="title">
+            <p>Active traders</p>
+          </div>
+          <div class="value">
+            <span>140 000 +</span>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 </div>
