--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-orders-mobile.component.html
@@ -1,33 +1,34 @@
+<div class="tabs widget__tabs">
+  <button
+    class="tabs__item "
+    (click)="toggleMainTab('open')"
+    [ngClass]="{'tabs__item--active': mainTab === 'open', 'tab-no-active': mainTab !== 'open'}"
+    [disabled]="loading$ | async"
+  >
+    {{'Open orders' | translate}} <span class="orders-count">{{openOrdersCount$ | async}}</span>
+  </button>
+  <button
+    class="tabs__item "
+    (click)="toggleMainTab('history')"
+    [ngClass]="{'tabs__item--active': mainTab === 'history', 'tab-no-active': mainTab !== 'history'}"
+    [disabled]="loading$ | async"
+  >
+    {{'Order history' | translate}}
+  </button>
+</div>
 
-  <div class="tabs widget__tabs">
-    <button
-      class="tabs__item "
-      (click)="toggleMainTab('open')"
-      [ngClass]="{'tabs__item--active': mainTab === 'open', 'tab-no-active': mainTab !== 'open'}"
-      [disabled]="loading$ | async"
-    >
-      {{'Open orders' | translate}} <span class="orders-count">{{openOrdersCount$ | async}}</span>
-    </button>
-    <button
-      class="tabs__item "
-      (click)="toggleMainTab('history')"
-      [ngClass]="{'tabs__item--active': mainTab === 'history', 'tab-no-active': mainTab !== 'history'}"
-      [disabled]="loading$ | async"
-    >
-      {{'Order history' | translate}}
-    </button>
-  </div>
+<app-embedded-open-orders-mobile
+  *ngIf="mainTab === 'open'"
+  (refreshOpenOrders)="toOpenOrders()"
+  [openOrders]="openOrders$ | async"
+  [currentPair]="activeCurrencyPair"
+>
+</app-embedded-open-orders-mobile>
 
-  <app-embedded-open-orders-mobile
-    *ngIf="mainTab === 'open'"
-    (refreshOpenOrders)="toOpenOrders()"
-    [openOrders]="openOrders$ | async"
-    [currentPair]="activeCurrencyPair">
-  </app-embedded-open-orders-mobile>
-
-  <app-embedded-orders-history-mobile
-    *ngIf="mainTab === 'history'"
-    [isVipUser]="isVipUser"
-    [historyOrders]="historyOrders$ | async"
-    [currentPair]="activeCurrencyPair">
-  </app-embedded-orders-history-mobile>
+<app-embedded-orders-history-mobile
+  *ngIf="mainTab === 'history'"
+  [isVipUser]="isVipUser"
+  [historyOrders]="historyOrders$ | async"
+  [currentPair]="activeCurrencyPair"
+>
+</app-embedded-orders-history-mobile>
