--- a/src/app/ieo/components/get-ready-banner/get-ready-banner.component.html
+++ b/src/app/ieo/components/get-ready-banner/get-ready-banner.component.html
@@ -1,7 +1,13 @@
-<div class="kyc-banner" (click)="onClick.emit()">
+<div
+  class="kyc-banner"
+  (click)="click.emit()"
+>
   <div class="kyc-banner-inner">
     <div class="banner-img">
-      <img src="assets/img/ieo/kyc-img.png" alt="">
+      <img
+        src="assets/img/ieo/kyc-img.png"
+        alt=""
+      >
     </div>
     <div class="content-wr">
       <div class="kyc-title">
@@ -11,7 +17,10 @@
         <p>{{'Verify your account to participate' | translate}}</p>
       </div>
       <div class="button-wr">
-        <button class="standart-btn" (click)="onClick.emit()">
+        <button
+          class="standart-btn"
+          (click)="click.emit()"
+        >
           <span>{{'Verify account now' | translate}}</span>
         </button>
       </div>
