--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
@@ -2,20 +2,26 @@
   <div class="ieo_info-wrapper">
     <div class="text-info-block">
       <h4>{{'Project Introduction' | translate}}</h4>
-      <p>The E-Tao is a worldwide e-commerce platform. In fact, it is an active - globally - mobile marketplace for blockchain-based purchases of a variety of goods and services from local suppliers, manufacturers, as well as private sellers. The platform is also designed to make virtual currency payments to buy and sell goods and services in the real world using cryptocurrency.</p>
+      <p>The E-Tao is a worldwide e-commerce platform. In fact, it is an active - globally - mobile marketplace for blockchain-based purchases of a variety of
+        goods and services from local suppliers, manufacturers, as well as private sellers. The platform is also designed to make virtual currency payments to
+        buy and sell goods and services in the real world using cryptocurrency.</p>
     </div>
     <div class="text-info-block">
       <h4>{{'Key features' | translate}}</h4>
 
       <div class="key-features-wr">
         <div class="infogr-wr">
-          <img src="assets/img/ieo/us.png" alt="">
+          <img
+            src="assets/img/ieo/us.png"
+            alt=""
+          >
         </div>
         <ul class="features-list">
           <li class="features-list-item">
             <p>1. An example of mass use of cryptocurrency</p>
             <span>Exchanging with tokens for any goods and services. It is enough to hold on to your cryptocurrencies and expect endlessly!
-            You can buy real goods with the help of cryptocurrency. All goods on the E-Tao market are immediately available for payment with ETAO tokens. Also the E-Tao platform will present a limited number of pre-selected items, which users will only be able to pay with E-Tao tokens.</span>
+              You can buy real goods with the help of cryptocurrency. All goods on the E-Tao market are immediately available for payment with ETAO tokens. Also
+              the E-Tao platform will present a limited number of pre-selected items, which users will only be able to pay with E-Tao tokens.</span>
           </li>
           <li class="features-list-item">
             <p>2. Works all over the world</p>
@@ -25,7 +31,8 @@
           </li>
           <li class="features-list-item">
             <p>3. All in one place</p>
-            <span>The E-Tao platform allows users to easily and securely connect to all online stores and control all purchases from a single account. Thousands of private ads for goods and services are collected in a single application</span>
+            <span>The E-Tao platform allows users to easily and securely connect to all online stores and control all purchases from a single account. Thousands
+              of private ads for goods and services are collected in a single application</span>
           </li>
           <li class="features-list-item">
             <p>4. Pay with cryptocurrency and get a discount!</p>
@@ -33,19 +40,26 @@
           </li>
           <li class="features-list-item">
             <p>5. Secure purchases by reserving funds for a smart contract</p>
-            <span>Reservation of ETAO tokens when making a transaction solves the main problem of all such services - safety. The seller does not receive payment until the service / product is provided / delivered to them in proper form. It is very important to know that absolutely all transactions in cryptocurrency can be tracked using blockchains.
-            When you pay with the platform, you get additional protection for your transaction with smart contracts and your own E-Tao guarantee. Obviously, off-platform transactions are much less profitable because the platform offers a number of unique and profitable advantages.</span>
+            <span>Reservation of ETAO tokens when making a transaction solves the main problem of all such services - safety. The seller does not receive
+              payment until the service / product is provided / delivered to them in proper form. It is very important to know that absolutely all transactions
+              in cryptocurrency can be tracked using blockchains.
+              When you pay with the platform, you get additional protection for your transaction with smart contracts and your own E-Tao guarantee. Obviously,
+              off-platform transactions are much less profitable because the platform offers a number of unique and profitable advantages.</span>
           </li>
           <li class="features-list-item">
             <p>6. A world without boundaries</p>
-            <span>The E-Tao platform connects Chinese resellers with customers around the globe. Users from all over the world now have full access to these products and services from China.</span>
+            <span>The E-Tao platform connects Chinese resellers with customers around the globe. Users from all over the world now have full access to these
+              products and services from China.</span>
           </li>
         </ul>
-        
+
       </div>
       <div class="key-features-wr">
         <div class="infogr-wr">
-          <img src="assets/img/ieo/sell.png" alt="">
+          <img
+            src="assets/img/ieo/sell.png"
+            alt=""
+          >
         </div>
         <ul class="features-list">
           <li class="features-list-item">
@@ -54,24 +68,29 @@
           </li>
           <li class="features-list-item">
             <p>2. It's easy to be the best salesman</p>
-            <span>The E-Tao platform provides a wide range of value-added services to online retailers and private sellers. This is, for example, a higher priority in search results, rating systems and home page appearances. And all this allows you to attract even more customers. These services, of course, can be paid for using ETAO tokens.</span>
+            <span>The E-Tao platform provides a wide range of value-added services to online retailers and private sellers. This is, for example, a higher
+              priority in search results, rating systems and home page appearances. And all this allows you to attract even more customers. These services, of
+              course, can be paid for using ETAO tokens.</span>
           </li>
           <li class="features-list-item">
             <p>3. Designed specifically for you</p>
-            <span>You can create your own personal online store on a platform that is ready to go. There's no need to spend your money developing your own platform or creating complex and expensive IT solutions. The E-Tao platform has already taken care of this and has all the resources you need to start trading instantly.</span>
+            <span>You can create your own personal online store on a platform that is ready to go. There's no need to spend your money developing your own
+              platform or creating complex and expensive IT solutions. The E-Tao platform has already taken care of this and has all the resources you need to
+              start trading instantly.</span>
           </li>
           <li class="features-list-item">
             <p>4. Continuous customer support</p>
-            <span>A business owner can ask for help from our 24-hour support team. E-Tao's proprietary arbitration system solves any customer problems quickly and efficiently.</span>
+            <span>A business owner can ask for help from our 24-hour support team. E-Tao's proprietary arbitration system solves any customer problems quickly
+              and efficiently.</span>
           </li>
           <li class="features-list-item">
             <p>5. Saving money</p>
             <span>Savings due to lack of commissions in favor of payment systems when using ETAO tokens.</span>
           </li>
         </ul>
-        
+
       </div>
-      
+
     </div>
     <div class="economics standart-pg">
       <div class="economics-inner">
@@ -102,7 +121,7 @@
                 <p>When Hard Cap is reacherd or at 2019/03/24 2:00 PM (UTC)</p>
               </div>
             </div>
-            
+
           </div>
         </div>
       </div>
@@ -171,7 +190,7 @@
                 <p>255,000,000 (5,1%)</p>
               </div>
             </div>
-            
+
           </div>
         </div>
       </div>
@@ -231,7 +250,7 @@
                 <p>Within 10 days after IEO ends</p>
               </div>
             </div>
-            
+
           </div>
         </div>
       </div>
@@ -334,7 +353,8 @@
                   <p>2%</p>
                 </div>
                 <div class="table-item-description">
-                  <p>10% is unblocked, and the remaining 90% of tokens will be unblocked in batches of 7.5% every two months, after being listed on the stock exchange for two years.</p>
+                  <p>10% is unblocked, and the remaining 90% of tokens will be unblocked in batches of 7.5% every two months, after being listed on the stock
+                    exchange for two years.</p>
                 </div>
               </div>
               <div class="economics-table-item">
@@ -378,14 +398,18 @@
                   <p>50%</p>
                 </div>
                 <div class="table-item-description">
-                  <p>5% will be used to form an ecosystem at an early stage after listing. 2.5% of the remaining tokens will be unblocked each month after 3 months of listing.</p>
+                  <p>5% will be used to form an ecosystem at an early stage after listing. 2.5% of the remaining tokens will be unblocked each month after 3
+                    months of listing.</p>
                 </div>
               </div>
-              
+
             </div>
-          </div>  
+          </div>
           <div class="graph-wr">
-            <img src="assets/img/ieo/graph-ieo.png" alt="">
+            <img
+              src="assets/img/ieo/graph-ieo.png"
+              alt=""
+            >
           </div>
         </div>
       </div>
@@ -398,16 +422,18 @@
         <br>- increase the involvement of the audience in the field of cryptocurrency by several times;
         <br>- to accelerate the growth rate of the cryptocurrency market;
         <br>- to revolutionize the world of e-commerce by shifting the mindset of users from the fiat model to the cryptocurrency model of the economy.
-      </p>        
+      </p>
       <p> The benefits of the E-Tao platform for retailers and customers are clear and significant.
         <br>That’s why we are - with a high degree of confidence - predict that this project will be commercially successful and promising.
-        <br>The further development of the project will also stimulate the volatility of the majority of alternative cryptocurrencies, mitigate market volatility and - globally - increase interest in the cryptographic industry as a whole.
-        <br>The world today is irreversibly and rapidly changing. As the crypto industry also grows rapidly with the world, it will take some time and some - if not all - of today's e-commerce giants will realize the need to integrate structural modules into their platforms to guarantee payment in the cryptocurrency.
+        <br>The further development of the project will also stimulate the volatility of the majority of alternative cryptocurrencies, mitigate market
+        volatility and - globally - increase interest in the cryptographic industry as a whole.
+        <br>The world today is irreversibly and rapidly changing. As the crypto industry also grows rapidly with the world, it will take some time and some - if
+        not all - of today's e-commerce giants will realize the need to integrate structural modules into their platforms to guarantee payment in the
+        cryptocurrency.
         <br>When that time comes, E-Tao will confidently occupy a significant part of this promising commercial niche.
-        <br>You can simply observe the changes taking place and do nothing, but you can change the world with us, working for the common progress and prosperity of humanity as a whole. That’s why we need your support of the E-Tao Project!
+        <br>You can simply observe the changes taking place and do nothing, but you can change the world with us, working for the common progress and prosperity
+        of humanity as a whole. That’s why we need your support of the E-Tao Project!
       </p>
     </div>
   </div>
 </div>
-
-
