--- a/src/app/ieo/components/ieo-how-it-works/ieo-how-it-works.component.html
+++ b/src/app/ieo/components/ieo-how-it-works/ieo-how-it-works.component.html
@@ -8,17 +8,48 @@
       <div class="ieo_how_it_work-item">
         <div class="ieo_how_it_work-item-inner">
           <div class="pics-container">
-            <img src="assets/img/ieo/verification.svg" alt="">
+            <img
+              src="assets/img/ieo/verification.svg"
+              alt=""
+            >
           </div>
           <div class="text-container">
             <h5>1. {{'Verification' | translate}}</h5>
             <p>{{'Complete identity verification and accept the Token Purchase Agreement.' | translate}}</p>
           </div>
           <div class="shape">
-            <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="13" y="14.8493" width="12" height="3" rx="1.5" transform="rotate(-45 13 14.8493)" fill="#5E5F74"/>
-              <rect x="21.4854" y="10.6066" width="12" height="3" rx="1.5" transform="rotate(-135 21.4854 10.6066)" fill="#5E5F74"/>
-              <rect y="7.00003" width="21" height="3" rx="1.5" fill="#5E5F74"/>
+            <svg
+              width="24"
+              height="17"
+              viewBox="0 0 24 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect
+                x="13"
+                y="14.8493"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-45 13 14.8493)"
+                fill="#5E5F74"
+              />
+              <rect
+                x="21.4854"
+                y="10.6066"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-135 21.4854 10.6066)"
+                fill="#5E5F74"
+              />
+              <rect
+                y="7.00003"
+                width="21"
+                height="3"
+                rx="1.5"
+                fill="#5E5F74"
+              />
             </svg>
           </div>
         </div>
@@ -26,17 +57,48 @@
       <div class="ieo_how_it_work-item">
         <div class="ieo_how_it_work-item-inner">
           <div class="pics-container">
-            <img src="assets/img/ieo/balance.svg" alt="">
+            <img
+              src="assets/img/ieo/balance.svg"
+              alt=""
+            >
           </div>
           <div class="text-container">
             <h5>2. {{'BAlance' | translate}}</h5>
             <p>{{'Replenish your balance to purchase tokens.' | translate}}</p>
           </div>
           <div class="shape">
-            <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="13" y="14.8493" width="12" height="3" rx="1.5" transform="rotate(-45 13 14.8493)" fill="#5E5F74"/>
-              <rect x="21.4854" y="10.6066" width="12" height="3" rx="1.5" transform="rotate(-135 21.4854 10.6066)" fill="#5E5F74"/>
-              <rect y="7.00003" width="21" height="3" rx="1.5" fill="#5E5F74"/>
+            <svg
+              width="24"
+              height="17"
+              viewBox="0 0 24 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect
+                x="13"
+                y="14.8493"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-45 13 14.8493)"
+                fill="#5E5F74"
+              />
+              <rect
+                x="21.4854"
+                y="10.6066"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-135 21.4854 10.6066)"
+                fill="#5E5F74"
+              />
+              <rect
+                y="7.00003"
+                width="21"
+                height="3"
+                rx="1.5"
+                fill="#5E5F74"
+              />
             </svg>
           </div>
         </div>
@@ -44,17 +106,49 @@
       <div class="ieo_how_it_work-item">
         <div class="ieo_how_it_work-item-inner">
           <div class="pics-container">
-            <img src="assets/img/ieo/enter.svg" alt="">
+            <img
+              src="assets/img/ieo/enter.svg"
+              alt=""
+            >
           </div>
           <div class="text-container">
             <h5>3. {{'enter the number of token' | translate}}</h5>
-            <p>{{"At the end of the countdown click button when it's active, enter the number of tokens, walkthrough the captcha and purchase." | translate}}</p>
+            <p>{{"At the end of the countdown click button when it's active, enter the number of tokens, walkthrough the captcha and purchase." | translate}}
+            </p>
           </div>
           <div class="shape">
-            <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="13" y="14.8493" width="12" height="3" rx="1.5" transform="rotate(-45 13 14.8493)" fill="#5E5F74"/>
-              <rect x="21.4854" y="10.6066" width="12" height="3" rx="1.5" transform="rotate(-135 21.4854 10.6066)" fill="#5E5F74"/>
-              <rect y="7.00003" width="21" height="3" rx="1.5" fill="#5E5F74"/>
+            <svg
+              width="24"
+              height="17"
+              viewBox="0 0 24 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect
+                x="13"
+                y="14.8493"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-45 13 14.8493)"
+                fill="#5E5F74"
+              />
+              <rect
+                x="21.4854"
+                y="10.6066"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-135 21.4854 10.6066)"
+                fill="#5E5F74"
+              />
+              <rect
+                y="7.00003"
+                width="21"
+                height="3"
+                rx="1.5"
+                fill="#5E5F74"
+              />
             </svg>
           </div>
         </div>
@@ -62,17 +156,48 @@
       <div class="ieo_how_it_work-item">
         <div class="ieo_how_it_work-item-inner">
           <div class="pics-container">
-            <img src="assets/img/ieo/wait.svg" alt="">
+            <img
+              src="assets/img/ieo/wait.svg"
+              alt=""
+            >
           </div>
           <div class="text-container">
             <h5>4. {{'Wait tokens' | translate}}</h5>
             <p>{{'Wait for the tokens to be added to your balance within the specified time.' | translate}}</p>
           </div>
           <div class="shape">
-            <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <rect x="13" y="14.8493" width="12" height="3" rx="1.5" transform="rotate(-45 13 14.8493)" fill="#5E5F74"/>
-              <rect x="21.4854" y="10.6066" width="12" height="3" rx="1.5" transform="rotate(-135 21.4854 10.6066)" fill="#5E5F74"/>
-              <rect y="7.00003" width="21" height="3" rx="1.5" fill="#5E5F74"/>
+            <svg
+              width="24"
+              height="17"
+              viewBox="0 0 24 17"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect
+                x="13"
+                y="14.8493"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-45 13 14.8493)"
+                fill="#5E5F74"
+              />
+              <rect
+                x="21.4854"
+                y="10.6066"
+                width="12"
+                height="3"
+                rx="1.5"
+                transform="rotate(-135 21.4854 10.6066)"
+                fill="#5E5F74"
+              />
+              <rect
+                y="7.00003"
+                width="21"
+                height="3"
+                rx="1.5"
+                fill="#5E5F74"
+              />
             </svg>
           </div>
         </div>
@@ -80,7 +205,10 @@
       <div class="ieo_how_it_work-item">
         <div class="ieo_how_it_work-item-inner">
           <div class="pics-container">
-            <img src="assets/img/ieo/trading.svg" alt="">
+            <img
+              src="assets/img/ieo/trading.svg"
+              alt=""
+            >
           </div>
           <div class="text-container">
             <h5>5. {{'Trading' | translate}}</h5>
