--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,67 +1,101 @@
 <div class="partners-main">
-	<div class="partners-main__inner">
+  <div class="partners-main__inner">
 
-		<div class="partners-main__head">
-			<div class="partners-head">
-				<h1>{{'Partner News' | translate}}</h1>
-			</div>
-<!-- <div class="follow-btn">
-				<button class="follow" (click)="makeSubscription()">
-					<span>Folowing</span>
-				</button>
-			</div> -->
-		</div>
+    <div class="partners-main__head">
+      <div class="partners-head">
+        <h1>{{'Partner News' | translate}}</h1>
+      </div>
+      <!-- <div class="follow-btn">
+		<button class="follow" (click)="makeSubscription()">
+			<span>Folowing</span>
+		</button>
+		</div> -->
+    </div>
 
-    <perfect-scrollbar (psYReachEnd)="loadMoreNews()" [ngStyle]="newsScrollStyles">
-		<div class="partners-body">
+    <perfect-scrollbar
+      (psYReachEnd)="loadMoreNews()"
+      [ngStyle]="newsScrollStyles"
+    >
+      <div class="partners-body">
 
-			<div class="partners-item-wr">
+        <div class="partners-item-wr">
 
-        <ng-container *ngFor="let item of allNews">
-				<div class="partnters-item">
-					<div class="partnters__additional-info">
-						<span>{{item.date  | amFromUtc | amLocal | amDateFormat:"DD MMM YYYY"}}</span>
-					</div>
-					<div class="partnters__lnk-part">
-						<a [href]="item.url" class="rss-lnk" target="blank" rel="nofollow">
-              {{item.title}}
-							<span>
-								<svg width="13" height="13" viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M12.2849 0.715113C11.8083 0.238401 11.2341 0 10.5627 0H2.43752C1.76613 0 1.19192 0.238401 0.715114 0.715113C0.238401 1.19192 0 1.7661 0 2.43752V10.5626C0 11.2339 0.238401 11.8082 0.715114 12.285C1.19192 12.7618 1.76613 13.0002 2.43752 13.0002H10.5626C11.234 13.0002 11.8082 12.7618 12.2848 12.285C12.7616 11.8082 13 11.234 13 10.5626V2.43752C13 1.7661 12.7616 1.19183 12.2849 0.715113ZM10.8335 6.77086C10.8335 7.00783 10.7233 7.1742 10.5033 7.27019C10.4301 7.29838 10.3593 7.31249 10.2917 7.31249C10.1395 7.31249 10.0125 7.2588 9.91087 7.1517L8.69218 5.93295L4.17279 10.4526C4.06545 10.5597 3.9386 10.6134 3.79186 10.6134C3.64506 10.6134 3.51809 10.5597 3.4109 10.4526L2.54762 9.58918C2.44039 9.48217 2.38677 9.35496 2.38677 9.20834C2.38677 9.06178 2.44039 8.93475 2.54762 8.82762L7.06728 4.3079L5.8485 3.08916C5.67354 2.92552 5.63408 2.72815 5.72995 2.49672C5.82583 2.27672 5.99237 2.1666 6.22935 2.1666H10.2917C10.4384 2.1666 10.5654 2.22025 10.6728 2.32751C10.7799 2.43464 10.8335 2.56164 10.8335 2.70835V6.77086H10.8335Z" fill="#525F73"/>
-								</svg>
-							</span>
-						</a>
-						<a [href]="item.url" class="resourse-lnk" target="blank"  rel="nofollow" >
-							<span class="lnk-pic">
-								<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M4.3947 9.52062L3.7875 10.1236C3.26115 10.6453 2.4051 10.6458 1.87905 10.1236C1.62615 9.87267 1.48725 9.53937 1.48725 9.18507C1.48725 8.83077 1.6263 8.49732 1.8789 8.24637L4.1139 6.02892C4.5771 5.56962 5.44845 4.89327 6.08355 5.52312C6.375 5.81262 6.8457 5.81067 7.13505 5.51937C7.42455 5.22807 7.42275 4.75722 7.1313 4.46802C6.05175 3.39672 4.4562 3.59472 3.0666 4.97352L0.83145 7.19112C0.2952 7.72347 0 8.43147 0 9.18507C0 9.93867 0.2952 10.6465 0.8316 11.1789C1.38345 11.7264 2.1081 12 2.83305 12C3.55815 12 4.2831 11.7264 4.83525 11.1786L5.4429 10.5754C5.7342 10.2862 5.73585 9.81552 5.44635 9.52407C5.1573 9.23292 4.68615 9.23127 4.3947 9.52062ZM11.1681 0.906572C10.0086 -0.243928 8.3874 -0.306328 7.314 0.758672L6.5571 1.51002C6.26565 1.79937 6.26385 2.26992 6.55335 2.56137C6.84285 2.85282 7.31355 2.85447 7.605 2.56512L8.3616 1.81422C8.91765 1.26207 9.64575 1.49097 10.1207 1.96212C10.3739 2.21307 10.5129 2.54652 10.5129 2.90082C10.5129 3.25527 10.3737 3.58872 10.121 3.83967L7.7364 6.20517C6.64605 7.28697 6.13455 6.77922 5.9163 6.56262C5.62485 6.27327 5.1543 6.27507 4.8648 6.56637C4.5753 6.85767 4.5771 7.32852 4.86855 7.61772C5.3691 8.11452 5.94045 8.36082 6.5394 8.36082C7.27275 8.36082 8.04735 7.99152 8.78385 7.26027L11.1684 4.89477C11.7045 4.36242 12 3.65427 12 2.90067C12 2.14737 11.7045 1.43922 11.1681 0.906572Z" fill="#525F73"/>
-								</svg>
-							</span>
-              {{item.url | refactUrlByNews}}
-						</a>
-					</div>
-				</div>
-        </ng-container>
+          <ng-container *ngFor="let item of allNews">
+            <div class="partnters-item">
+              <div class="partnters__additional-info">
+                <span>{{item.date | amFromUtc | amLocal | amDateFormat:"DD MMM YYYY"}}</span>
+              </div>
+              <div class="partnters__lnk-part">
+                <a
+                  [href]="item.url"
+                  class="rss-lnk"
+                  target="blank"
+                  rel="nofollow"
+                >
+                  {{item.title}}
+                  <span>
+                    <svg
+                      width="13"
+                      height="13"
+                      viewBox="0 0 13 13"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M12.2849 0.715113C11.8083 0.238401 11.2341 0 10.5627 0H2.43752C1.76613 0 1.19192 0.238401 0.715114 0.715113C0.238401 1.19192 0 1.7661 0 2.43752V10.5626C0 11.2339 0.238401 11.8082 0.715114 12.285C1.19192 12.7618 1.76613 13.0002 2.43752 13.0002H10.5626C11.234 13.0002 11.8082 12.7618 12.2848 12.285C12.7616 11.8082 13 11.234 13 10.5626V2.43752C13 1.7661 12.7616 1.19183 12.2849 0.715113ZM10.8335 6.77086C10.8335 7.00783 10.7233 7.1742 10.5033 7.27019C10.4301 7.29838 10.3593 7.31249 10.2917 7.31249C10.1395 7.31249 10.0125 7.2588 9.91087 7.1517L8.69218 5.93295L4.17279 10.4526C4.06545 10.5597 3.9386 10.6134 3.79186 10.6134C3.64506 10.6134 3.51809 10.5597 3.4109 10.4526L2.54762 9.58918C2.44039 9.48217 2.38677 9.35496 2.38677 9.20834C2.38677 9.06178 2.44039 8.93475 2.54762 8.82762L7.06728 4.3079L5.8485 3.08916C5.67354 2.92552 5.63408 2.72815 5.72995 2.49672C5.82583 2.27672 5.99237 2.1666 6.22935 2.1666H10.2917C10.4384 2.1666 10.5654 2.22025 10.6728 2.32751C10.7799 2.43464 10.8335 2.56164 10.8335 2.70835V6.77086H10.8335Z"
+                        fill="#525F73"
+                      />
+                    </svg>
+                  </span>
+                </a>
+                <a
+                  [href]="item.url"
+                  class="resourse-lnk"
+                  target="blank"
+                  rel="nofollow"
+                >
+                  <span class="lnk-pic">
+                    <svg
+                      width="12"
+                      height="12"
+                      viewBox="0 0 12 12"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M4.3947 9.52062L3.7875 10.1236C3.26115 10.6453 2.4051 10.6458 1.87905 10.1236C1.62615 9.87267 1.48725 9.53937 1.48725 9.18507C1.48725 8.83077 1.6263 8.49732 1.8789 8.24637L4.1139 6.02892C4.5771 5.56962 5.44845 4.89327 6.08355 5.52312C6.375 5.81262 6.8457 5.81067 7.13505 5.51937C7.42455 5.22807 7.42275 4.75722 7.1313 4.46802C6.05175 3.39672 4.4562 3.59472 3.0666 4.97352L0.83145 7.19112C0.2952 7.72347 0 8.43147 0 9.18507C0 9.93867 0.2952 10.6465 0.8316 11.1789C1.38345 11.7264 2.1081 12 2.83305 12C3.55815 12 4.2831 11.7264 4.83525 11.1786L5.4429 10.5754C5.7342 10.2862 5.73585 9.81552 5.44635 9.52407C5.1573 9.23292 4.68615 9.23127 4.3947 9.52062ZM11.1681 0.906572C10.0086 -0.243928 8.3874 -0.306328 7.314 0.758672L6.5571 1.51002C6.26565 1.79937 6.26385 2.26992 6.55335 2.56137C6.84285 2.85282 7.31355 2.85447 7.605 2.56512L8.3616 1.81422C8.91765 1.26207 9.64575 1.49097 10.1207 1.96212C10.3739 2.21307 10.5129 2.54652 10.5129 2.90082C10.5129 3.25527 10.3737 3.58872 10.121 3.83967L7.7364 6.20517C6.64605 7.28697 6.13455 6.77922 5.9163 6.56262C5.62485 6.27327 5.1543 6.27507 4.8648 6.56637C4.5753 6.85767 4.5771 7.32852 4.86855 7.61772C5.3691 8.11452 5.94045 8.36082 6.5394 8.36082C7.27275 8.36082 8.04735 7.99152 8.78385 7.26027L11.1684 4.89477C11.7045 4.36242 12 3.65427 12 2.90067C12 2.14737 11.7045 1.43922 11.1681 0.906572Z"
+                        fill="#525F73"
+                      />
+                    </svg>
+                  </span>
+                  {{item.url | refactUrlByNews}}
+                </a>
+              </div>
+            </div>
+          </ng-container>
 
-			</div>
+        </div>
 
-			<div class="preloader-container active" *ngIf="isLoading">
-				<div class="preloader-item">
-					<div class="preloader-line small-height">
-						<span></span>
-					</div>
-					<div class="preloader-line"></div>
-					<div class="preloader-line"></div>
-					<div class="preloader-line"></div>
-				</div>
-				<div class="preloader-item">
-					<div class="preloader-line small-height"><span></span></div>
-					<div class="preloader-line"></div>
-					<div class="preloader-line"></div>
-					<div class="preloader-line"></div>
-				</div>
-			</div>
-		</div>
+        <div
+          class="preloader-container active"
+          *ngIf="isLoading"
+        >
+          <div class="preloader-item">
+            <div class="preloader-line small-height">
+              <span></span>
+            </div>
+            <div class="preloader-line"></div>
+            <div class="preloader-line"></div>
+            <div class="preloader-line"></div>
+          </div>
+          <div class="preloader-item">
+            <div class="preloader-line small-height"><span></span></div>
+            <div class="preloader-line"></div>
+            <div class="preloader-line"></div>
+            <div class="preloader-line"></div>
+          </div>
+        </div>
+      </div>
     </perfect-scrollbar>
-	</div>
+  </div>
 </div>
