--- a/src/app/dashboard/components/chat/chat-message/chat-message.component.html
+++ b/src/app/dashboard/components/chat/chat-message/chat-message.component.html
@@ -1,10 +1,16 @@
-<div class="widget__message-wrap " [ngClass]="{'widget__message-wrap--left': isMine}">
+<div
+  class="widget__message-wrap "
+  [ngClass]="{'widget__message-wrap--left': isMine}"
+>
   <div class="widget__message-icon">
     <img src="../../assets/img/chat-icon1.svg">
   </div>
   <div class="widget__message">
     <div class="widget__message-nickname">{{ message.email | nickname }}</div>
-    <div class="widget__message-reply" *ngIf="message.messageReplyText && message.messageReplyText !== 'text_reply'">
+    <div
+      class="widget__message-reply"
+      *ngIf="message.messageReplyText && message.messageReplyText !== 'text_reply'"
+    >
       <div class="widget__message-nickname">{{ message.messageReplyUsername }}</div>
       <p class="widget__message-text">{{ message.messageReplyText}}</p>
     </div>
