--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -1,4 +1,7 @@
-<div class="currency-pair-info" *ngIf="true">
+<div
+  class="currency-pair-info"
+  *ngIf="true"
+>
   <div class="currency-pair-info__inner">
     <app-dynamic-input-dashboard
       [value]="pairInput"
@@ -7,17 +10,32 @@
       (onSelect)="onSelectPair($event.text)"
       (onBlur)="onBlurInput()"
     ></app-dynamic-input-dashboard>
-    <div class="currency-pair-info__info" style="min-width: 180px;"
-         [ngClass]="{'currency-pair-info__info--up': flagForArrow('up'),
-                     'currency-pair-info__info--down': flagForArrow('down')}">
+    <div
+      class="currency-pair-info__info"
+      style="min-width: 180px;"
+      [ngClass]="{
+        'currency-pair-info__info--up': flagForArrow('up'),
+        'currency-pair-info__info--down': flagForArrow('down')
+      }"
+    >
       <div class="currency-pair-info__info-inner">
         <div class="currency-pair-info__change">
           <span>
             {{currentCurrencyInfo?.percentChange || 0 | number:'1.0-2' | replaceNumber}}%
           </span>
           <!--<span>{{currentCurrencyInfo.percentChange >= 0 ? '+' : '-'}}{{!currentCurrencyInfo.percentChange ? 0 : currentCurrencyInfo.percentChange}}%</span>-->
-          <img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="" *ngIf="flagForArrow('up')">
-          <img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="" *ngIf="flagForArrow('down')">
+          <img
+            class="currency-pair-info__arr-up"
+            src="../assets/img/arr-up-green.svg"
+            alt=""
+            *ngIf="flagForArrow('up')"
+          >
+          <img
+            class="currency-pair-info__arr-down"
+            src="../assets/img/arr-down-red.svg"
+            alt=""
+            *ngIf="flagForArrow('down')"
+          >
 
           <span *ngIf="(currentCurrencyInfo?.changedValue) < 0.01 && (currentCurrencyInfo?.changedValue) > 0; else changedValue">
             {{currentCurrencyInfo?.changedValue || 0 | replaceNumber : false }} {{pair.name | splitCurrency : 2}}
@@ -41,31 +59,40 @@
         </ng-template>
       </div>
     </div>
-    <div class="currency-pair-info__item" style="min-width: 130px; padding-left: 0;">
+    <div
+      class="currency-pair-info__item"
+      style="min-width: 130px; padding-left: 0;"
+    >
       <div class="currency-pair-info__item-title">{{'24h high' | translate}}</div>
       <span class="currency-pair-info__item-value">
         {{currentCurrencyInfo?.rateHigh || 0 | number:'1.0-8' | replaceNumber }}
       </span>
     </div>
-    <div class="currency-pair-info__item" style="min-width: 130px;">
+    <div
+      class="currency-pair-info__item"
+      style="min-width: 130px;"
+    >
       <div class="currency-pair-info__item-title">{{'24h low' | translate}}</div>
       <span class="currency-pair-info__item-value">
         {{currentCurrencyInfo?.rateLow || 0 | number:'1.0-8' | replaceNumber}}
       </span>
     </div>
-    <div class="currency-pair-info__item" style="min-width: 180px;">
+    <div
+      class="currency-pair-info__item"
+      style="min-width: 180px;"
+    >
       <div class="currency-pair-info__item-title">{{'24h volume' | translate}}</div>
-      <span class="currency-pair-info__item-value" >
+      <span class="currency-pair-info__item-value">
         {{currentCurrencyInfo?.volume24h || 0 | number:'1.0-0' | replaceNumber}} {{pair.name | splitCurrency : 1}}
       </span>
     </div>
     <!--<div class="currency-pair-info__item" *ngIf="userBalanceInfo">-->
-      <!--<div class="currency-pair-info__item-title">You have</div>-->
-      <!--<div class="currency-pair-info__you-have">-->
-        <!--<span class="currency-pair-info__item-value">{{ userBalanceInfo.balanceByCurrency1 | number:'1.0-0' | replaceNumber }} {{ firstCurrency }}</span>-->
-        <!--<span class="currency-pair-info__vertical-line"></span>-->
-        <!--<span class="currency-pair-info__item-value">{{ userBalanceInfo.balanceByCurrency2 | number:'1.0-0' | replaceNumber }} {{ secondCurrency }}</span>-->
-      <!--</div>-->
+    <!--<div class="currency-pair-info__item-title">You have</div>-->
+    <!--<div class="currency-pair-info__you-have">-->
+    <!--<span class="currency-pair-info__item-value">{{ userBalanceInfo.balanceByCurrency1 | number:'1.0-0' | replaceNumber }} {{ firstCurrency }}</span>-->
+    <!--<span class="currency-pair-info__vertical-line"></span>-->
+    <!--<span class="currency-pair-info__item-value">{{ userBalanceInfo.balanceByCurrency2 | number:'1.0-0' | replaceNumber }} {{ secondCurrency }}</span>-->
+    <!--</div>-->
     <!--</div>-->
   </div>
 </div>
