--- a/src/app/ieo/components/ieo-info/ieo-info.component.html
+++ b/src/app/ieo/components/ieo-info/ieo-info.component.html
@@ -3,15 +3,25 @@
   <div class="fs-wr">
     <div class="fs-wr-inner">
       <div class="fs-image-container">
-          <img src="assets/img/ieo/bg.jpg" alt="">
+        <img
+          src="assets/img/ieo/bg.jpg"
+          alt=""
+        >
       </div>
-      <div class="fs-content" *ngIf="IEOData">
+      <div
+        class="fs-content"
+        *ngIf="IEOData"
+      >
         <div class="bittorrent">
-          <img src="assets/img/ieo/e-tao.png" alt="">
+          <img
+            src="assets/img/ieo/e-tao.png"
+            alt=""
+          >
         </div>
         <div class="btc-session">
           <div class="b-s-title">
-            <h3>{{IEOData.currencyDescription}} - BTC {{'Session' | translate}}<span class="upcoming {{IEOData.status | lowercase}}">{{IEOData.status | showStageStatus}}</span></h3>
+            <h3>{{IEOData.currencyDescription}} - BTC {{'Session' | translate}}<span
+                class="upcoming {{IEOData.status | lowercase}}">{{IEOData.status | showStageStatus}}</span></h3>
           </div>
           <table class="b-s-table">
             <tr>
@@ -34,7 +44,10 @@
           </table>
           <div class="buy-block">
 
-            <div class="progress-block" *ngIf="stage.RUNNING === currentStage">
+            <div
+              class="progress-block"
+              *ngIf="stage.RUNNING === currentStage"
+            >
               <div class="currency-info">
                 <div class="currency-buyed">
                   <span class="buyed-value">{{boughtAmount || 0 | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}}</span>
@@ -45,17 +58,27 @@
                 </div>
               </div>
               <div class="currency-bar">
-                <div class="currency-bar-progress" [style.width.%]="boughtAmountPer"></div>
+                <div
+                  class="currency-bar-progress"
+                  [style.width.%]="boughtAmountPer"
+                ></div>
               </div>
             </div>
 
             <div class="amount">
-              <p>{{'Amount' | translate}}: <span>{{(IEOData.amount  || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}} {{IEOData.currencyName}}</span></p>
+              <p>{{'Amount' | translate}}: <span>{{(IEOData.amount || 0) | roundCurrency: 'BTC' | formatCurrency: 'short': 'BTC'}}
+                  {{IEOData.currencyName}}</span></p>
             </div>
 
-            <div class="starts" *ngIf="stage.PENDING === currentStage">
+            <div
+              class="starts"
+              *ngIf="stage.PENDING === currentStage"
+            >
               <p>{{'Starts In' | translate}}:</p>
-              <div class="timer" [innerHTML]="timer"></div>
+              <div
+                class="timer"
+                [innerHTML]="timer"
+              ></div>
             </div>
 
             <div class="button-part">
@@ -65,11 +88,14 @@
                   [ngClass]="{'ieo-buy': requirements.kycCheck && !requirements.countryCheck}"
                   [disabled]="ieoLoading || (currentStage !== stage.RUNNING) || (requirements.kycCheck && !requirements.countryCheck)"
                   *ngIf="isAuthenticated && (currentStage === stage.RUNNING || currentStage === stage.PENDING)"
-                  (click)="onBuy.emit()"
+                  (click)="buy.emit()"
                 >
                   <span>{{'Buy Now' | translate}}</span>
                 </button>
-                <div class="input-hint-wrapper" *ngIf="isAuthenticated">
+                <div
+                  class="input-hint-wrapper"
+                  *ngIf="isAuthenticated"
+                >
                   <span class="wrap-input__message">
                     {{'Sorry, your country not allowed' | translate}}
                   </span>
@@ -78,7 +104,7 @@
               <button
                 class="standart-btn"
                 *ngIf="!isAuthenticated"
-                (click)="login()"
+                (click)="onLogin()"
               >
                 <span>{{'Log In' | translate}}</span>
               </button>
@@ -89,7 +115,8 @@
                 *ngIf="isAuthenticated
                  && (currentStage === stage.SUCCEEDED
                  || currentStage === stage.FAILED
-                  || currentStage === stage.TERMINATED)">
+                  || currentStage === stage.TERMINATED)"
+              >
                 <span>{{'More' | translate}}</span>
               </button>
 
