--- a/src/app/ieo/components/popup-failed/popup-failed.component.html
+++ b/src/app/ieo/components/popup-failed/popup-failed.component.html
@@ -1,8 +1,14 @@
 <div class="overlay ieo-notification">
-	<div class="popup">
-    <div class="popup__close" (click)="closeMe()"></div>
+  <div class="popup">
+    <div
+      class="popup__close"
+      (click)="closeMe()"
+    ></div>
     <h6 class="popup__title tnx-head">{{'Proceed to verification' | translate}}</h6>
-    <p class="popup__subtitle tnx-description" translate>
+    <p
+      class="popup__subtitle tnx-description"
+      translate
+    >
       To participate in the ICO {{IEOData.currencyDescription}} Coins <br> Your account must be verified
     </p>
     <button
