--- a/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
+++ b/src/app/funds/balance/qubera-popup/deposit/step-one-deposit/step-one-deposit.component.html
@@ -105,7 +105,7 @@
             <span class="value-info">{{bankInfo.swiftCode}}</span>
           </div>
         </div>
-        <a class="print" [href]="bankInfo.downloadUrl">
+        <a class="print" [href]="bankInfo.url">
           <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" viewBox="0 0 19 19" fill="none">
             <path d="M11.8748 14.25H5.9375V15.4377H11.8748V14.25Z" fill="#237BEF"/>
             <path d="M4.75009 1.18755H14.25V3.56254H15.4373V1.18755C15.4374 0.532356 14.9062 0 14.25 0H4.75009C4.09425 0 3.5625 0.532356 3.5625 1.18755V3.56254H4.75009V1.18755Z" fill="#237BEF"/>
